more test cases. Several of these are failing for reasons I don't entirely understand. The 'for loop with exception' case seems particularly suspect.